# blastcontain-oss

./: .gitignore  MIGRATION_NOTES.md  README.md  pyproject.toml
.github/: dependabot.yml
core/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  pyproject.toml
core/blastcontain_core/: __init__.py  charter.py  constants.py  ignore.py  models.py  sarif.py  signing.py
core/tests/: test_charter.py  test_drill_models.py  test_models.py  test_signing.py
discovery/: README.md  pyproject.toml
discovery/blastcontain_discovery/: __init__.py  cli.py  models.py  report.py  scanner.py
discovery/blastcontain_discovery/scanners/: __init__.py  bootstrap.py  copilot.py  process.py  registry.py  repo.py
discovery/tests/unit/: test_registry_bootstrap.py  test_scanner_report_cli.py  test_scanners.py
docs/: BlastContain-Overview.md  BlastContain-architecture-diagrams.md  BlastContain-charter-spec.md  (+11 more)
drill/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Containerfile  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  constraints.txt  pyproject.toml
drill/blastcontain_drill/: __init__.py  __main__.py  _scenario.py  attackdb.py  cli.py  config.py  diff.py  jailbreak_study.py  llm.py  reporter.py  runner.py  sweep.py
drill/blastcontain_drill/cage/: __init__.py  _podman_runner.py  agent.py  base.py  inprocess.py  podman.py  stub.py
drill/blastcontain_drill/corpus/: __init__.py  aig.py  base.py  builtin.py  jailbreakbench.py  multiturn.py  operators.py  systemcard.py
drill/blastcontain_drill/corpus/data/jbb/: SOURCE.md
drill/blastcontain_drill/generative/: __init__.py  attacker.py  goals.py  loop.py
drill/blastcontain_drill/probes/: __init__.py  canary.py  egress.py  forbidden_tool.py
drill/blastcontain_drill/scoring/: __init__.py  base.py  combine.py  geval.py  granite.py  guard.py  heuristic.py  judge.py  reliability.py  wildguard.py
drill/docs/: design.md  plugin-registry-design.md  roadmap.md  spec.md
drill/examples/: blastcontain-drill.yaml
drill/scripts/: guard_compare.py
drill/tests/integration/: test_live_lmstudio.py  test_podman_cage.py
drill/tests/unit/: test_aig.py  test_attackdb.py  test_cage.py  test_corpus.py  test_diff.py  test_error_surfacing.py  test_generative.py  test_geval.py  test_jailbreak_study.py  test_jailbreakbench.py  test_judge_reliability.py  test_multiturn.py  test_operators.py  test_probes.py  test_reporter.py  test_runner.py  test_scoring.py  test_sweep.py  test_systemcard.py
guard/: .gitignore  LICENSE  NOTICE  README.md  constraints.txt  pyproject.toml
guard/blastcontain_guard/: __init__.py  __main__.py  agt_export.py  ask.py  augmentation.py  chokepoint.py  cli.py  compile.py  concerns.py  condition.py  config.py  constants.py  errors.py  evaluator.py  guard.py  learning.py  models.py  platform_source.py  policy.py  reporter.py  telemetry.py
guard/blastcontain_guard/adapters/: __init__.py  claude_code.py  generic.py  mcp.py
guard/blastcontain_guard/backends/: __init__.py  agt.py  native.py
guard/docs/: architecture.md  plugin-registry-input.md
guard/examples/: agent.py  charter.yaml  demo_agt_server.py  mode-agt-only.yaml  mode-guard-agt.yaml  mode-guard-only.yaml  policy.yaml
guard/tests/unit/: test_agt_export.py  test_ask.py  test_backends.py  test_claude_code.py  test_cli.py  test_compile.py  test_condition.py  test_delegation.py  test_evaluator.py  test_from_config.py  test_guard.py  test_learning.py  test_platform_source.py  test_policy.py  test_telemetry.py
platform/server/: pyproject.toml  server.py
platform/server/blastcontain/: __init__.py  app.py  store.py
platform/server/blastcontain/charter/: __init__.py  catalog.py  compiler.py  derive.py  lifecycle.py  schema.py
platform/server/blastcontain/ledger/: __init__.py  audit_packet.py  drift.py  hitl.py  mpl.py  notify.py  scrub.py
tools/scout/: CHANGELOG.md  README.md  constraints.txt  pyproject.toml
tools/scout/blastcontain_scout/: __init__.py  analyze.py  arxiv.py  cli.py  ledger.py  llm.py  pipeline.py  render.py  repo.py
tools/scout/tests/: test_analyze.py  test_arxiv.py  test_ledger.py  test_render.py
verify/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Containerfile  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.txt  constraints-full.txt  pyproject.toml
verify/blastcontain_verify/: __init__.py  augmentation.py  cli.py  config.py  constants.py  contract.py  ignore.py  models.py  registry.py  reporter.py  reporter_sarif.py  scanner.py
verify/blastcontain_verify/checks/: __init__.py  api.py  code.py  credentials.py  environment.py  filesystem.py  local.py  mcp.py  memory.py  network.py  persistence.py  process.py  skills.py  supply_chain.py  tls.py
verify/docs/: architecture.md  plugins.md  roadmap.md  spec.md  usage.md
verify/examples/: blastcontain-verify.yaml
verify/examples/plugin-check/: pyproject.toml
verify/examples/plugin-check/orgpolicy_demo/: __init__.py
verify/tests/integration/: Makefile  compose.yml  conftest.py  test_fail.py  test_pass.py
verify/tests/integration/api-server/: Dockerfile  server.py
verify/tests/integration/fixtures/clean/: mcp-config.json  openapi.yaml
verify/tests/integration/fixtures/clean/models/: weights.sha256
verify/tests/integration/fixtures/clean/skills/: safe_tool.json
verify/tests/integration/fixtures/clean/skills/safe_skill/: SKILL.md
verify/tests/integration/fixtures/clean/src/: safe.py
verify/tests/integration/fixtures/dirty/: .env  config.yaml  context.txt  mcp-config.json  openapi.yaml
verify/tests/integration/fixtures/dirty/skills/: exfil_tool.json  shell_exec.yaml
verify/tests/integration/fixtures/dirty/skills/exfil_skill/: SKILL.md  run.py
verify/tests/integration/fixtures/dirty/src/: agent.py  loader.py
verify/tests/integration/mcp-server/: Dockerfile  server.py
verify/tests/unit/: conftest.py  test_cli.py  test_config.py  test_doc_consistency.py  test_registry.py  test_reporter.py  test_scanner.py
verify/tests/unit/checks/: test_code.py  test_credentials.py  test_environment.py  test_mcp.py
(+55 files in other folders)
