[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blastcontain-discovery"
version = "0.1.0"
description = "Shadow-AI discovery for agents, copilots, and MCP servers — signed inventory reports"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "BlastContain Contributors" }]
keywords = ["ai-safety", "agent-security", "shadow-ai", "discovery", "mcp", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "blastcontain-core>=0.2,<1.0",
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.urls]
Homepage      = "https://github.com/blastcontain/discovery"
Repository    = "https://github.com/blastcontain/discovery"
Issues        = "https://github.com/blastcontain/discovery/issues"

[project.optional-dependencies]
# Running-process enumeration is used-if-present; without psutil that scanner
# simply returns nothing (availability-flag pattern).
process = ["psutil>=5.9"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "psutil>=5.9",
]

[project.scripts]
blastcontain-discovery = "blastcontain_discovery.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["blastcontain_discovery"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100
# Match the sibling packages: str-valued Enums are the house style (UP042 off).
lint.select = ["E", "F", "W", "I", "B", "C4", "SIM"]
lint.ignore = ["E501"]
