[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blastcontain-drill"
version = "0.1.0"
description = "Adversarial red-team scanner for AI agents — versioned attack corpus, cage action-ground-truth, signed DrillReport"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "BlastContain Contributors" }]
keywords = [
    "ai-safety", "agent-security", "red-team", "jailbreak",
    "prompt-injection", "mitre-atlas", "owasp-agentic", "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "blastcontain-core>=0.2,<1.0",
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.urls]
Homepage      = "https://github.com/blastcontain/drill"
Repository    = "https://github.com/blastcontain/drill"
Issues        = "https://github.com/blastcontain/drill/issues"
Documentation = "https://github.com/blastcontain/drill/blob/main/docs/spec.md"

[project.optional-dependencies]
# Optional, availability-flagged augmentation (used-if-present, never required).
judge = ["deepeval>=1.0"]              # G-Eval / LLM-as-judge harness for the content plane
full  = ["deepeval>=1.0"]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
blastcontain-drill = "blastcontain_drill.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["blastcontain_drill"]
# Scout proposals (corpus/contrib/**) are inert staging drafts, not product code —
# never ship them in the wheel. They are ratified into corpus/ proper by a human.
exclude = ["blastcontain_drill/corpus/contrib/**"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-ra --strict-markers"
markers = [
    "live: requires a running LM Studio / OpenAI-compatible model server (deselect: -m 'not live')",
    "podman: requires Podman on the host (deselect: -m 'not podman')",
]
