[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blastcontain-guard"
version = "0.1.0"
description = "In-process enforcer for interactive/copilot agents — loads a local YAML or compiled Charter, resolves allow/ask/deny at the tool-call boundary, prompts on ask, streams signed decisions"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "BlastContain Contributors" }]
keywords = [
    "ai-safety", "agent-security", "policy-enforcement", "guardrails",
    "human-in-the-loop", "mcp", "tool-use", "governance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "blastcontain-core>=0.2,<1.0",
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.urls]
Homepage      = "https://github.com/blastcontain/guard"
Repository    = "https://github.com/blastcontain/guard"
Issues        = "https://github.com/blastcontain/guard/issues"
Documentation = "https://github.com/blastcontain/guard/blob/main/docs/spec.md"

[project.optional-dependencies]
# Optional, availability-flagged augmentation (used-if-present, never required).
otel = ["opentelemetry-sdk>=1.20"]    # export decisions as OTel logs/spans if installed
full = ["opentelemetry-sdk>=1.20"]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
blastcontain-guard = "blastcontain_guard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["blastcontain_guard"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-ra --strict-markers"
markers = [
    "live: requires a network endpoint (Ledger / OTel collector); deselect with -m 'not live'",
]
