[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blastcontain-verify"
version = "0.3.1"
description = "Pre-deployment compliance scanner for AI agents — 27 security checks, SARIF output, signed audit packets"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "BlastContain Contributors" }]
keywords = [
    "ai-safety", "agent-security", "compliance", "scanner",
    "sarif", "mit-ai-risk", "mcp", "presidio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "blastcontain-core>=0.1,<1.0",
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.urls]
Homepage      = "https://github.com/blastcontain/verify"
Repository    = "https://github.com/blastcontain/verify"
Issues        = "https://github.com/blastcontain/verify/issues"
Documentation = "https://github.com/blastcontain/verify/blob/main/docs/spec.md"

[project.optional-dependencies]
# Secure-by-default: [full] is the CVE-clean augmentation set (Presidio + AGT).
# The Cisco AI Defense scanners are NOT in [full] — they transitively pull
# `litellm`, which exact-pins vulnerable `aiohttp` / `python-dotenv`
# (CVE-2026-34993, -47265, -40217, -28684) with no fix available upstream
# (every cisco-ai-mcp-scanner release pins litellm==1.83.7). Opt in with the
# [cisco] extra to enable SKILL-02 + the Cisco MCP-01 backend and accept that
# trade-off. See SECURITY.md.
full  = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "agent-governance-toolkit",
]
pii   = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
agt   = ["agent-governance-toolkit"]

# Cisco AI Defense scanners — OPT-IN ONLY (pull litellm + CVE-bearing pins).
mcp   = ["cisco-ai-mcp-scanner"]
skill = ["cisco-ai-skill-scanner"]
cisco = ["cisco-ai-mcp-scanner", "cisco-ai-skill-scanner"]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
blastcontain-verify = "blastcontain_verify.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["blastcontain_verify"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-ra --strict-markers"
