[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blastcontain-server"
version = "0.2.0"
description = "BlastContain Platform — Charter + Ledger + Fleet API"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "blastcontain-core>=0.2,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",          # FastAPI TestClient transport
    "blastcontain-guard",   # closed-loop integration tests (in-process enforcer)
]

[tool.uv.sources]
blastcontain-core = { path = "../../core", editable = true }
blastcontain-guard = { path = "../../guard", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["blastcontain"]
